# ai-factory

./: .coverage  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AI Factory — Codebase Audit & Improvement Plan.md  AUDIT.md  CLAUDE.md  CONTRIBUTING.md  PROGRESS.md  Procfile  README.md  ROADMAP.md  SHORTCUTS.md  WHITEPAPER.md  package-lock.json  pyproject.toml  railway.toml  requirements.txt  run_pipeline.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
Agent-Guidelines-for-Upwork-Learning-Projects/: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  mkdocs.yml  noxfile.py  preflight.sh  pyproject.toml
Agent-Guidelines-for-Upwork-Learning-Projects/.claude/: settings.json
Agent-Guidelines-for-Upwork-Learning-Projects/.claude/hooks/: stop-preflight.sh
Agent-Guidelines-for-Upwork-Learning-Projects/.githooks/: pre-commit
Agent-Guidelines-for-Upwork-Learning-Projects/.github/: PULL_REQUEST_TEMPLATE.md
Agent-Guidelines-for-Upwork-Learning-Projects/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Agent-Guidelines-for-Upwork-Learning-Projects/.github/workflows/: ci.yml  release.yml  secret-scan.yml
Agent-Guidelines-for-Upwork-Learning-Projects/config/: .gitignore
Agent-Guidelines-for-Upwork-Learning-Projects/docs/: index.md  runbook.md
Agent-Guidelines-for-Upwork-Learning-Projects/docs/cli/: email.md  index.md  pdf.md  sheets.md
Agent-Guidelines-for-Upwork-Learning-Projects/docs/development/: contributing.md  testing.md  type-checking.md
Agent-Guidelines-for-Upwork-Learning-Projects/docs/examples/: bol-com.md  workflows.md
Agent-Guidelines-for-Upwork-Learning-Projects/docs/getting-started/: configuration.md  installation.md  quick-start.md
Agent-Guidelines-for-Upwork-Learning-Projects/docs/integrations/: email.md  google-sheets.md  pdf-processing.md
Agent-Guidelines-for-Upwork-Learning-Projects/docs/stylesheets/: extra.css
Agent-Guidelines-for-Upwork-Learning-Projects/examples/: auto_email.py  pdf_to_sheets.py
Agent-Guidelines-for-Upwork-Learning-Projects/examples/bol_com/: README.md  __init__.py  cli.py  client.py  config.py  sync.py
Agent-Guidelines-for-Upwork-Learning-Projects/src/: __init__.py  cli.py
Agent-Guidelines-for-Upwork-Learning-Projects/src/integrations/: __init__.py  base.py  email_handler.py  google_sheets.py  pdf_processor.py
Agent-Guidelines-for-Upwork-Learning-Projects/src/utils/: __init__.py  config.py  logger.py  retry.py
Agent-Guidelines-for-Upwork-Learning-Projects/tests/: test_cli.py
Agent-Guidelines-for-Upwork-Learning-Projects/tests/fixtures/: credentials.json
Agent-Guidelines-for-Upwork-Learning-Projects/tests/integrations/: test_base.py  test_email_handler.py  test_google_sheets.py  test_pdf_processor.py
Agent-Guidelines-for-Upwork-Learning-Projects/tests/utils/: test_config.py  test_logger.py  test_retry.py
Moneymaker/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  daemon.py  docker-compose.yml  main.py  requirements.txt  test.md
Moneymaker/api/: main.py  routes.py
Moneymaker/core/: metrics.py  reward.py  schema.py
Moneymaker/infra/: db.py  prometheus.yml  redis_client.py
Moneymaker/migrations/: 001_init.sql
Moneymaker/scripts/: smoke_test.sh
Moneymaker/src/: __init__.py  config.py  conversion_tracker.py  deployer.py  distributor.py  engine.py  (+8 more)
SalesAI/: .gitignore  README.md  package.json  server.js  start.sh
ai-factory-api/: main.py
ai-knowledge-filler/: .gitmessage  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  akf.py  cliff.toml
docs/: api.md  pipeline.md
telemetry/: events.jsonl
workspace/: client_finder.py  connector.py  llm_router.py  matcher.py  offer_generator.py  run_utils.py
(+348 files in other folders)
