[project]
name = "upwork-learning"
version = "0.1.0"
description = "Automation and integration tools for Upwork projects"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Petr Nazarenko" }
]
keywords = ["automation", "integrations", "google-sheets", "pdf", "email"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "gspread>=6.0.0",
    "imapclient>=3.0.1",
    "pdfplumber>=0.11.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.0.0",
    # Pinned to 2.19.2 — no patched release for CVE-2026-4539 yet (see CI audit ignore)
    "pygments>=2.19.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.0.0",
    "nox>=2024.0.0",
    "codespell>=2.2.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-gen-files>=0.5.0",
]

security = [
    # gitleaks is a standalone CLI binary and not reliably installable from PyPI.
    "detect-secrets>=1.5.0",
]

[project.scripts]
upwork-learn = "src.cli:main"

[project.urls]
Homepage = "https://github.com/petro-nazarenko/Agent-Guidelines-for-Upwork-Learning-Projects"
Repository = "https://github.com/petro-nazarenko/Agent-Guidelines-for-Upwork-Learning-Projects"
Issues = "https://github.com/petro-nazarenko/Agent-Guidelines-for-Upwork-Learning-Projects/issues"
Changelog = "https://github.com/petro-nazarenko/Agent-Guidelines-for-Upwork-Learning-Projects/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "UP007",  # use X | Y for union types (py311+)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = ["tests.*"]
strict = false

[[tool.mypy.overrides]]
module = ["imapclient.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
